--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,19 +11,20 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
     position: fixed;
     width: 100%;
     z-index: 1;
+    top: 0;
   }
 
 nav {
     width: 100%;
-    padding: 5px 48px;
+    padding: 0 48px;
 }
 
 nav h1 {
-    font-size: 32px;
+    font-size: 24px;
     color: #e76f51;
     font-weight: 600;
     font-family: 'Poppins', sans-serif;
@@ -42,15 +43,15 @@ nav .spacer {
     flex-grow: 1;
 }
 
-.button {
+button {
     display: inline-flex;
     align-items: center;
     justify-content: center;
     font-size: 16px;
-    padding: 12px 40px;
+    padding: 8px 30px;
     border-radius: 2em;
     font-family: 'Poppins', sans-serif;
-    font-weight: 450;
+    font-weight: 400;
     text-align: center;
     background-color: #264653;
     color: #ffffff;
@@ -60,12 +61,12 @@ nav .spacer {
     
 }
 
-.button img {
+button img {
     height: 20px;
     padding-right: 10px;
 }
 
-.button:hover {
+button:hover {
     cursor: pointer;
     background-color: #ffffff;
     color: #264653;
@@ -73,17 +74,18 @@ nav .spacer {
 }
 
 .logo {
-    width: 60px;
+    width: 50px;
     display: inline-block;
 }
 
 .hero-image {
     background-image: url("./images/banner-img.png");
-    height: 700px;
+    height: 650px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    margin-top: 50px;
   }
 
 .hero-content {
@@ -111,19 +113,92 @@ nav .spacer {
     white-space: nowrap;
 }
 
-.hero-content .button {
+.hero-content button {
     background-color: #2A9D8F;
     margin: 32px 20px 0;
     padding: 16px;
     width: 180px;
     border-color: #2A9D8F;
     font-size: 20px;
-    font-weight: 400;
 }
 
-.hero-content .button:hover {
+.hero-content button:hover {
     background-color: transparent;
     cursor: pointer;
     color: #ffffff;
     border-color: #ffffff;
+}
+
+.book-list {
+    text-align: center;
+    padding: 0;
+}
+
+.book-list h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 48px;
+    font-weight: 600;
+    color: #264653;
+    margin-top: 64px;
+}
+
+.books-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding: 0 10% 80px;
+}
+
+.book {
+    display: inline-block;
+    padding: 0 40px;
+}
+
+.book img {
+    height: 300px;
+    width: 200px;
+    border-radius: 10px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #ffffff;
+}
+
+.book img:hover {
+    cursor: pointer;
+    border-width: 0px;
+    height: 310px;
+    width: 210px;
+    border-radius: 5px;
+}
+
+.search-bar {
+    display: flex;
+    justify-content: center;
+    margin: 32px 0 48px;
+}
+
+.search-bar input[type=text] {
+    padding: 5px 20px;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    border-top-left-radius: 2em;
+    border-bottom-left-radius: 2em;
+    width: 500px;
+    border: 2px solid #ACABAB;
+    border-right-width: 0;
+    outline: none;
+}
+
+.search-bar input[type=text]::placeholder {
+    color: #ACABAB;
+}
+
+.search-bar input[type=image] {
+    border-top-right-radius: 2em;
+    border-bottom-right-radius: 2em;
+    border: 2px solid #ACABAB;
+    border-left-width: 0;
+    padding: 5px 18px;
+    cursor: pointer;
 }
