--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,7 +11,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
     position: fixed;
     width: 100%;
     z-index: 1;
@@ -29,6 +29,7 @@ nav h1 {
     font-weight: 600;
     font-family: 'Poppins', sans-serif;
     margin: 0;
+    cursor: pointer;
 }
 
 nav ul {
@@ -76,6 +77,7 @@ button:hover {
 .logo {
     width: 50px;
     display: inline-block;
+    cursor: pointer;
 }
 
 .hero-image {
@@ -85,8 +87,7 @@ button:hover {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    margin-top: 50px;
-  }
+}
 
 .hero-content {
     text-align: center;
@@ -129,6 +130,10 @@ button:hover {
     border-color: #ffffff;
 }
 
+.nav-spacer {
+    height: 50px;
+}
+
 .book-list {
     text-align: center;
     padding: 0;
@@ -152,7 +157,8 @@ button:hover {
 
 .book {
     display: inline-block;
-    padding: 0 40px;
+    padding: 0 32px 64px;
+    width: 210px;
 }
 
 .book img {
@@ -162,6 +168,8 @@ button:hover {
     border-width: 5px;
     border-style: solid;
     border-color: #ffffff;
+    object-fit: cover;
+    
 }
 
 .book img:hover {
@@ -170,6 +178,23 @@ button:hover {
     height: 310px;
     width: 210px;
     border-radius: 5px;
+}
+
+.book p {
+    cursor: pointer;
+    float: left;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 16px;
+    margin: 0 0 0 5px;
+    letter-spacing: 0.5px;
+    color: #000000;
+}
+
+.book p:hover {
+    text-decoration: underline;
 }
 
 .search-bar {
@@ -201,4 +226,50 @@ button:hover {
     border-left-width: 0;
     padding: 5px 18px;
     cursor: pointer;
+}
+
+.profile-but {
+    background-color: #2A9D8F;
+    border-color: #2A9D8F;
+    margin-left: 25px;
+}
+
+.profile-but:hover {
+    color:#2A9D8F
+}
+
+.profile-icon {
+    width: 20px;
+    height: 20px;
+    background-image: url(images/profile-white.svg);
+    background-repeat: no-repeat;
+    margin-right: 8px;
+}
+
+.profile-but:hover .profile-icon {
+    background-image: url(images/profile-blue.svg);
+}
+
+nav a {
+    font-size: 16px;
+    color: #264653;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    margin: 0 30px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+
+nav a.active {
+    color: #e76f51;
+    font-weight: 600;
+}
+
+.spinner-container {
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    justify-content: center;
+    align-items: center;
 }
