--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -44,6 +44,7 @@ nav .spacer {
     flex-grow: 1;
 }
 
+
 button {
     display: inline-flex;
     align-items: center;
@@ -139,12 +140,14 @@ button:hover {
     padding: 0;
 }
 
-.book-list h1 {
+.page-title {
     font-family: 'Poppins', sans-serif;
     font-size: 48px;
     font-weight: 600;
     color: #264653;
     margin-top: 64px;
+    width: 100%;
+    text-align: center;
 }
 
 .books-container {
@@ -226,6 +229,7 @@ button:hover {
     border-left-width: 0;
     padding: 5px 18px;
     cursor: pointer;
+    width: min-content;
 }
 
 .profile-but {
@@ -258,6 +262,8 @@ nav a {
     margin: 0 30px;
     cursor: pointer;
     text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 
 
@@ -271,5 +277,153 @@ nav a.active {
     width: 100%;
     height: 80vh;
     justify-content: center;
+    align-items: center;
+}
+
+.post-form {
+    display: flex;
+    align-items: flex-start;
+    justify-content: left;
+    padding: 0 22% 80px;
+    flex-direction: column;
+    width: 100%;
+    box-sizing: border-box; 
+}
+
+.post-form form {
+    width: 100%;
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+}
+
+.post-form textarea {
+    display: block;
+    padding: 10px 16px;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    border-radius: 10px;
+    width: 500px;
+    border: 2px solid #ACABAB;
+    width: 100%;
+    resize: none;
+    box-sizing: border-box;
+    margin: 0 0 30px;
+}
+
+.post-form textarea::placeholder {
+    color: #ACABAB;
+}
+
+.post-form label {
+    font-size: 16px;
+    color: #000000;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    margin: 20px 0 10px;
+    display: block;
+}
+
+.post-form h2 {
+    font-size: 16px;
+    color: #000000;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+}
+
+.post-form .search-bar {
+    margin-top: 10px;
+    margin-bottom: 16px;
+    justify-self: left;
+    display: inline-flex;
+    flex-direction: row;
+}
+
+.post-form h3 {
+    float: left;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 16px;
+    margin: 0 0 16px;
+    color: #000000;
+    width: 100%;
+}
+
+.post-form h4 {
+    float: left;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 14px;
+    letter-spacing: 0.3px;
+    margin: 10px 0;
+    color: #000000;
+    width: 100%;
+}
+
+.post-form [type=submit] {
+    background-color: #264653;
+    font-size: 16px;
+    color: #ffffff;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    padding: 8px 40px;
+    border-radius: 2em;
+    width: min-content;
+    align-self: center;
+    border-color: #264653;
+    outline: none;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.post-form [type=submit]:hover {
+    background-color: #ffffff;
+    color: #264653;
+}
+
+.book-options img {
+    border-radius: 5px;
+    height: 160px;
+    cursor: pointer;
+}
+
+.book-options img:hover {
+    outline: 2px solid #2A9D8F;
+    outline-offset: 4px;
+}
+
+.book-options {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    width: 100%;
+}
+
+.posted {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+    flex-direction: column;
+}
+
+.posted h2 {
+    color: #00A36C;
+}
+
+.posted img {
+    margin: 0 5px;
+}
+.posted button {
+    margin: 8px;
+}
+
+.posted .line {
+    display: inline-flex;
     align-items: center;
 }
