--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital@0;1&family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@1,400;1,500;1,600&display=swap');
 
 body {
   margin: 0;
@@ -185,19 +185,31 @@ button:hover {
 
 .book p {
     cursor: pointer;
-    float: left;
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
-    font-size: 16px;
-    margin: 0 0 0 5px;
+    font-size: 14px;
+    margin: 4px 0 0 5px;
     letter-spacing: 0.5px;
     color: #000000;
 }
 
 .book p:hover {
     text-decoration: underline;
+}
+
+.book h2 {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    margin: 0;
+    overflow: hidden;
+    text-align: center;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    height: 48px;
 }
 
 .search-bar {
@@ -230,28 +242,6 @@ button:hover {
     padding: 5px 18px;
     cursor: pointer;
     width: min-content;
-}
-
-.profile-but {
-    background-color: #2A9D8F;
-    border-color: #2A9D8F;
-    margin-left: 25px;
-}
-
-.profile-but:hover {
-    color:#2A9D8F
-}
-
-.profile-icon {
-    width: 20px;
-    height: 20px;
-    background-image: url(images/profile-white.svg);
-    background-repeat: no-repeat;
-    margin-right: 8px;
-}
-
-.profile-but:hover .profile-icon {
-    background-image: url(images/profile-blue.svg);
 }
 
 nav a {
@@ -356,7 +346,7 @@ nav a.active {
     float: left;
     font-family: "Playfair Display", serif;
     font-optical-sizing: auto;
-    font-weight: 600;
+    font-weight: 500;
     font-style: normal;
     font-size: 14px;
     letter-spacing: 0.3px;
@@ -426,4 +416,209 @@ nav a.active {
 .posted .line {
     display: inline-flex;
     align-items: center;
+}
+
+.book-info {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    padding: 8% 15% 50px;
+    box-sizing: border-box; 
+}
+
+.cover-container {
+    display: flex;
+    flex-direction: column;
+    width: 260px;
+    flex-shrink: 0;
+}
+
+.cover-container p {
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    font-size: 13px;
+    letter-spacing: 0.3px;
+    color: #000000;
+}
+
+.cover-container .info {
+    float: right;
+    text-align: right;
+    width: 50%;
+}
+
+.title-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-left: 80px;
+}
+
+.title-container h2 {
+    font-size: 20px;
+    color: #000000;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+    font-style: italic;
+    margin: 0;
+    color: #264653;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.title-container h1 {
+    font-size: 32px;
+    color: #000000;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    width: fit-content;
+}
+
+.title-container h3 {
+    font-size: 16px;
+    color: #000000;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    margin: 4px 0 0;
+}
+
+.title-container h4 {
+    font-size: 18px;
+    color: #000000;
+    font-weight: 500;
+    font-family: 'Poppins', sans-serif;
+    margin: 0 0 12px;
+}
+
+.title-container p {
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    letter-spacing: 0.3px;
+    color: #000000;
+    margin: 0;
+}
+
+.title-container .description {
+    margin: 0;
+    font-family: "Playfair Display", serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0.3px;
+    color: #000000;
+}
+
+.title-container .box {
+    display: block;
+    background-color: #D9D9D9;
+    border-radius: 20px;
+    padding: 32px;
+}
+
+.title-container button {
+    width: fit-content;
+    background-color: #e76f51;
+    border-color: #e76f51;
+    margin: 16px 0;
+}
+
+.title-container button:hover {
+    width: fit-content;
+    background-color: #ffffff;
+    border-color: #e76f51;
+    color: #e76f51;
+}
+
+hr {
+    height: 1px;
+    background-color: #000;
+    border: none;
+    margin: 24px 0;
+}
+
+.dropbtn {
+    background-color: #2A9D8F;
+    border-color: #2A9D8F;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    margin-left: 18px;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #ffffff;
+    border-color: #2A9D8F;
+    color: #2A9D8F;
+    cursor: default;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    z-index: 1;
+    border-radius: 10px;
+    top: 100%;
+    text-align: center;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.8s ease-out;
+}
+
+.dropdown-content.show {
+    max-height: 300px;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 14px 0;
+    width: 136px;
+    text-decoration: none;
+    display: block;
+    margin: 0;
+    font-size: 14px;
+}
+
+.dropdown-content p {
+    color: black;
+    padding: 14px 0;
+    width: 136px;
+    text-decoration: none;
+    display: block;
+    margin: 0;
+    font-size: 14px;
+    cursor: pointer;
+    font-weight: 400;
+    font-family: 'Poppins', sans-serif;
+}
+
+.dropdown-content a:hover, .dropdown-content p:hover {
+    background-color: #f1f1f1;
+    border-radius: 12px;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.profile-icon {
+    width: 20px;
+    height: 20px;
+    background-image: url(images/profile-white.svg);
+    background-repeat: no-repeat;
+    margin-right: 8px;
+}
+
+.dropdown:hover .profile-icon {
+    background-image: url(images/profile-blue.svg);
 }
